# tunguska

./: .gitignore  CMakeLists.txt  README.md  common.h  pal_linux.h  pal_win32.h  sfx.h  t.c
font/: font.h  pack.py  strings.txt
gfx/: decayingfactory.frag  decayingfactory.h  fogforest.frag  load.frag  load.h  symbolize.py  symbols.h  text.frag  text.h
gfx/symbols/: dbox.frag  dbox3.frag  dvoronoi.frag  lfnoise.frag  mfnoise.frag  normal.frag  rand.frag
minification/: Compressor.py  GLSLLexer130.py
sketch/: brainstorm.txt  cube_analytical.wxmx  other_analytical.wxmx
test/: GLSLLexerTest.py
